examples/test/testpolicy18117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18117
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key6: value41
      key5: value47
      key29: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value33
          key49: value44
      podSelector:
        matchLabels:
          key44: value22
          key8: value41
          key33: value39
